--- a/package.json
+++ b/package.json
@@ -15,27 +15,29 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
-    "expo": "~52.0.8",
+    "dayjs": "^1.11.13",
+    "expo": "~52.0.17",
+    "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.7",
-    "expo-splash-screen": "~0.29.11",
+    "expo-router": "~4.0.11",
+    "expo-splash-screen": "^0.29.16",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.5",
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-crypto": "~14.0.1",
-    "expo-image-picker": "~16.0.3"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
