--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.47.7",
     "@tanstack/react-query": "^5.62.8",
+    "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.13",
     "expo": "~52.0.17",
     "expo-crypto": "~14.0.1",
+    "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
