--- a/package.json
+++ b/package.json
@@ -14,42 +14,45 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/material-top-tabs": "^7.1.0",
     "@react-navigation/native": "^7.0.0",
     "@supabase/supabase-js": "^2.47.7",
     "@tanstack/react-query": "^5.62.8",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.13",
-    "expo": "~52.0.17",
-    "expo-crypto": "~14.0.1",
-    "expo-file-system": "~18.0.6",
-    "expo-font": "~13.0.1",
-    "expo-image-picker": "~16.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.11",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "^0.29.16",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.5",
-    "expo-web-browser": "~14.0.1",
+    "expo": "~52.0.25",
+    "expo-crypto": "~14.0.2",
+    "expo-file-system": "~18.0.7",
+    "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.4",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "^0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "^0.76.3",
+    "react-native": "^0.76.6",
     "react-native-elements": "^3.4.3",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@snaplet/copycat": "^5.1.1",
+    "@snaplet/seed": "^0.98.0",
+    "@types/pg": "^8.11.10",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.3.3"
   },
